--- a/index.html
+++ b/index.html
@@ -5,20 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="flexbox.css">
+    <link rel="stylesheet" href="css1.css">
+
 </head>
 <body>
-    <section>
-        <div>1</div>
-        <div>2</div>
-        <div>3</div>
-        <div>4</div>
-        <div>5</div>
-        <div>6</div>
-    </section>
-
-    <section>
-        <button><span>Home</span></button>
-    </section>
+    <nav class="nav">
+        <div class="icon"><svg class="icon_img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--! Font Awesome Pro 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M220.6 121.2L271.1 96 448 96v96H333.2c-21.9-15.1-48.5-24-77.2-24s-55.2 8.9-77.2 24H64V128H192c9.9 0 19.7-2.3 28.6-6.8zM0 128V416c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V96c0-35.3-28.7-64-64-64H271.1c-9.9 0-19.7 2.3-28.6 6.8L192 64H160V48c0-8.8-7.2-16-16-16H80c-8.8 0-16 7.2-16 16l0 16C28.7 64 0 92.7 0 128zM344 304c0 48.6-39.4 88-88 88s-88-39.4-88-88s39.4-88 88-88s88 39.4 88 88z"/></svg> IMAGES</div> 
+ 
+        <div class="content">
+         <a href="#">Home</a>
+         <a href="#">About</a>
+         <a href="#">Blog</a>
+         <a href="#">Plans</a>
+         <a href="#">Gallery</a>
+         <a href="#">Contact Us</a>
+         </div>
+ 
+         <button class="btn">Book Trial</button>
+ 
+     </nav>
+    
 </body>
 </html>
